--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/c,c++,visualstudio
+# Created by https://www.gitignore.io/api/c,c++,visualstudio,visualstudiocode
 
 ### C ###
 # Prerequisites
@@ -73,6 +73,14 @@ dkms.conf
 *.lai
 
 # Executables
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
 
 ### VisualStudio ###
 ## Ignore Visual Studio temporary files, build results, and
@@ -367,4 +375,4 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 
-# End of https://www.gitignore.io/api/c,c++,visualstudio
+# End of https://www.gitignore.io/api/c,c++,visualstudio,visualstudiocode
